# focus-data-toolkit

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  container.yml  release-build.yml  release-container.yml  release-dry-run.yml  release.yml  reproducibility.yml  scale.yml  scorecard.yml  security.yml
constraints/: build-backend.in  build-backend.txt  release.txt  runtime.txt  test.txt
docs/: compatibility.md  model-provenance.md  releasing.md  runner.md  security-model.md  studio.md  supplements.md  versioning.md
docs/audit/: 2026-07-improvement-plan.md  2026-07-repo-audit.md
schema/: model_provenance.schema.json
scripts/: check_pinned_actions.py  generate_resolved_sbom.py  generate_sbom.py  verify_model_provenance.py  verify_release.py
src/focus_data_toolkit/: __init__.py  __main__.py  _version.py  cli.py  errors.py  focus_json.py  lifecycle.py  manifest.py  modes.py  official_validator.py  progress.py  provenance.py  py.typed  runtime.py
src/focus_data_toolkit/context/: __init__.py  billing.py  provider.py
src/focus_data_toolkit/convert/: __init__.py  billing_period.py  contract_applied.py  contract_commitment.py  cost_and_usage.py  detect.py  invoice_detail.py  streaming.py
src/focus_data_toolkit/generators/: __init__.py  _shim.py  generate_aws_focus_1_2.py  generate_aws_focus_1_3.py  generate_azure_focus_1_2.py  generate_azure_focus_1_3.py  generate_gcp_focus_1_2.py  generate_gcp_focus_1_3.py  scenarios.py
src/focus_data_toolkit/generators/engine/: __init__.py  context.py  determinism.py  json_focus.py  ladder.py  scenarios_core.py  serialize.py
src/focus_data_toolkit/generators/providers/: __init__.py  aws.py  azure.py  gcp.py  profile.py
src/focus_data_toolkit/generators/versions/: __init__.py  adapter.py  v1_2.py  v1_3.py
src/focus_data_toolkit/io/: __init__.py  atomic_writer.py  csv_io.py  parquet_io.py  records.py  row_source.py
src/focus_data_toolkit/model/: __init__.py  capabilities.py  focus_1_4_decimal_scale.json  focus_1_4_model.json  focus_1_4_servicesubcategory.json  focus_json_keys.py  iso_4217_currencies.json  json_schema_check.py  model_provenance.json  validator.py
src/focus_data_toolkit/model/json_schemas/: allocatedmethoddetailsobjectschema.json  commitmentprogrameligibilitydetailsobjectschema.json  contractappliedobjectschema.json  contractcommitmentapplicabilityobjectschema.json  json_schemas_provenance.json
src/focus_data_toolkit/schema/: __init__.py  detection.py  registry.py
src/focus_data_toolkit/storage/: __init__.py  external_index.py  spill.py
src/focus_data_toolkit/studio/: __init__.py  app.py  config.py  jobs.py  preview.py  security.py  server.py
src/focus_data_toolkit/studio/frontend/: app.js  index.html  style.css
src/focus_data_toolkit/supplement/: __init__.py  apply.py  gaps.py  kinds.py  loader.py  spec.py  validate.py
src/focus_data_toolkit/supplement/adapters/: __init__.py  adapters_provenance.json  aws_invoice_summary.json  aws_savings_plans.json  azure_invoice.json  gcp_compute_commitments.json  registry.py
src/focus_data_toolkit/validate/: __init__.py  allocation.py  bundle.py  codes.py  corrections.py  reconciliation.py  referential.py
tests/: conftest.py  test_adapters_aws.py  test_adapters_azure_gcp.py  test_atomic_write.py  test_billing_lifecycle.py  test_bundle_gate.py  test_bundle_validation.py  test_capabilities.py  test_cli.py  test_client_like.py  test_container.py  test_contract_applied.py  test_contract_commitment_semantics.py  test_convert_roundtrip.py  test_corrections.py  test_cross_provider.py  test_detect.py  test_fake_provider.py  test_fixtures_are_synthetic.py  test_focus_json.py  test_gaps.py  test_generator_golden.py  test_generators.py  test_grouping_keys.py  test_lifecycle_chains.py  test_lineage_counters.py  test_lint_focus.py  test_manifest.py  test_model_provenance.py  test_multi_provider.py  test_official_json_schemas.py  test_official_validator.py  test_packaging.py  test_parquet.py  test_parquet_input.py  test_participant_entities.py  test_partitioning.py  test_progress_cancel.py  test_release_tooling.py  test_replace_recovery.py  (+14 more)
tests/fixtures/client_like/: SOURCES.md  consolidated_multi_provider_1_3.csv
tests/fixtures/golden/: README.md
tests/fixtures/golden/compatibility_golden/: aws_1_2_cost_and_usage_rows100_seed42.csv  aws_1_2_cost_and_usage_rows25_seed7_credits.csv  aws_1_3_contract_commitment_rows100_seed42.csv  aws_1_3_cost_and_usage_rows100_seed42.csv  aws_1_3_cost_and_usage_rows25_seed7.csv  aws_1_3_cost_and_usage_rows25_seed7_credits.csv  azure_1_2_cost_and_usage_rows100_seed42.csv  azure_1_2_cost_and_usage_rows25_seed7.csv  azure_1_2_cost_and_usage_rows25_seed7_credits.csv  azure_1_3_contract_commitment_rows100_seed42.csv  azure_1_3_cost_and_usage_rows100_seed42.csv  azure_1_3_cost_and_usage_rows25_seed7_credits.csv  gcp_1_2_cost_and_usage_rows100_seed42.csv  gcp_1_2_cost_and_usage_rows25_seed7_credits.csv  gcp_1_3_contract_commitment_rows100_seed42.csv  gcp_1_3_cost_and_usage_rows100_seed42.csv  gcp_1_3_cost_and_usage_rows25_seed7.csv  gcp_1_3_cost_and_usage_rows25_seed7_credits.csv  scenarios_correction_set.csv  scenarios_sca_equal.csv  scenarios_sca_negative.csv  scenarios_sca_weighted.csv
tests/fixtures/golden/correctness_migration/: .gitkeep
tests/fixtures/official/: SOURCES.md  invoice_detail_grain_example.json  numeric_format_examples.json
tools/: benchmark_streaming.py  extract_focus_1_4_model.py
