[build-system]
# setuptools >= 77 for PEP 639 (SPDX `license` expression + `license-files`).
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-data-toolkit"
description = "Generate provider-realistic FOCUS 1.2/1.3 sample data (AWS, Azure, GCP) and convert it to the four FOCUS 1.4 datasets — strictly from source facts, completed by client supplements including native AWS/Azure/GCP exports — with schema detection, gap analysis, a cross-dataset validation gate and atomic writes."
readme = "README.md"
requires-python = ">=3.11"
# PEP 639: SPDX expression + explicit license files (replaces the legacy license table and the
# `License ::` classifier, which setuptools >= 77 deprecates when an SPDX expression is used).
# The distribution carries MIT toolkit code AND CC-BY-4.0 data (the embedded FOCUS model and
# the vendored official JSON schemas, works of the FinOps Foundation) — the compound SPDX
# expression makes that visible to license scanners reading core metadata, not only to
# readers of NOTICE (which carries the attribution details).
license = "MIT AND CC-BY-4.0"
license-files = ["LICENSE", "NOTICE", "LICENSES/CC-BY-4.0.txt"]
authors = [{ name = "Guy-Hermann Adiko" }]
keywords = ["finops", "focus", "billing", "cost", "sample-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
# The core toolkit is standard-library only.
dependencies = []
# Single source of truth: focus_data_toolkit._version.__version__ (a tiny import-free module,
# so the build backend never imports the package to read the version).
dynamic = ["version"]

[project.optional-dependencies]
# Parquet read/write (P1.6). PyArrow is the only new runtime dependency and is used solely for
# columnar I/O with exact decimal128 — the core stays standard-library only.
parquet = [
    # Wide range for compatibility; the lock/CI resolves to the latest (25.x). pyarrow >= 23.0.1
    # fixes PYSEC-2026-113, so the resolved version is vulnerability-free (see the pip-audit job).
    "pyarrow>=15,<26",
    # pyarrow resolves timestamp timezones ("UTC") via Python's tzdata, which is absent on
    # Windows (no system tz database) — without it, Parquet Date/Time output raises
    # ZoneInfoNotFoundError. No-op on Linux/macOS.
    "tzdata>=2024.1 ; sys_platform == 'win32'",
]
# The "scale" extra is intentionally an alias of "parquet": external state for large inputs
# (dedup / aggregation / joins) is handled by the stdlib sqlite3, so no extra engine is added.
scale = ["focus-data-toolkit[parquet]"]
# The official FinOps FOCUS validator, from PyPI. It requires Python >= 3.12, so the marker keeps
# `pip install focus-data-toolkit[validator]` a no-op (rather than an error) on Python 3.11.
validator = ["focus-validator>=2.1,<3 ; python_version >= '3.12'"]
all = ["focus-data-toolkit[parquet,validator]"]
# Building and checking distributions (used by the packaging tests and the release pipeline).
release = ["build>=1,<2", "twine>=5,<7"]
# `dev` includes pyarrow so the Parquet test suite actually runs (not silently importorskip'd),
# the release tooling so the packaging tests can build/inspect the wheel and sdist, and the
# type-checker + coverage plugin used by CI.
dev = [
    "focus-data-toolkit[release,parquet]",  # parquet pulls pyarrow + tzdata (Windows)
    "pytest>=8",
    "pytest-cov>=5,<8",
    "ruff>=0.6",
    "mypy>=1.11,<2.4",
    # Validates the FOCUS model-provenance JSON Schema in CI (test_model_provenance). Dev/CI only;
    # the runtime core and the stdlib provenance verifier do not require it.
    "jsonschema>=4.21,<5",
]

[project.scripts]
focus-toolkit = "focus_data_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/guymano/focus-data-toolkit"
Source = "https://github.com/guymano/focus-data-toolkit"
Issues = "https://github.com/guymano/focus-data-toolkit/issues"
Changelog = "https://github.com/guymano/focus-data-toolkit/blob/main/CHANGELOG.md"
Documentation = "https://github.com/guymano/focus-data-toolkit#readme"

[tool.setuptools.dynamic]
version = { attr = "focus_data_toolkit._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# PEP 561 typing marker + the embedded FOCUS 1.4 model/reference JSON and the
# vendored official FOCUS JSON object schemas (with their provenance manifest).
"focus_data_toolkit" = ["py.typed"]
"focus_data_toolkit.model" = ["*.json", "json_schemas/*.json"]
# Vendored provider-native supplement adapters (AWS/Azure/GCP mapping tables + provenance).
"focus_data_toolkit.supplement.adapters" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
files = ["src/focus_data_toolkit"]
python_version = "3.11"
ignore_missing_imports = true  # pyarrow / focus_validator ship no stubs we depend on
warn_redundant_casts = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["focus_data_toolkit"]
branch = true

[tool.coverage.report]
# Non-regressive floor (measured at introduction; raise, never lower on failure).
fail_under = 80
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "@overload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Heavy scale/performance and build/install tests are excluded from the default run;
# run them explicitly with `pytest -m slow` / `pytest -m packaging`.
addopts = "-m 'not slow and not packaging'"
markers = [
    "slow: large-scale / performance tests (excluded from the default run)",
    "packaging: build/install a distribution (slower; needs the [release] extra)",
]
